--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <meta name="description"content=""/>
     <!-- <link rel="hash-icon" href="%PUBLIC_URL%/logo/logo192.svg" /> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Trekr</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>renohub</title>
   </head>
   <body>
     <div id="root">
